# cppcourse

./: CMakeLists.txt  README.md  bootstrap  ubie.code-workspace
App/: CMakeLists.txt
App/src/: MainApp.cpp
Lib/: CMakeLists.txt
Lib/src/: MyClass.cpp  MyClass.h
Test/: CMakeLists.txt
Test/src/: MyClassTest.cpp  UnitTestMain.cpp
build-arm/: toolchain-arm.cmake
build-code/: toolchain-x86.cmake
build-x86/: toolchain-x86.cmake
